# github-big-proj46

./: .gitignore  pyproject.toml
codebridge/: __init__.py  __init___20260704_155605_289.py
codebridge/cli/: main.py
codebridge/core/: __init__.py  __init___20260704_155745_318.py  context_engine.py  gate_engine.py  graph_engine.py  metrics_engine.py  review_engine.py  security_engine.py
tests/: __init__.py  test_core.py
