[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebridge"
version = "1.0.0"
description = "AI-to-Production Intelligence Pipeline: Bridge the gap between AI code generation and production delivery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "lanekingkong", email = "lanekingkong@github.com"}
]
keywords = ["ai", "code-review", "security", "knowledge-graph", "devops", "ci-cd", "llm", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "tree-sitter>=0.21.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "sqlalchemy>=2.0.0",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "litellm>=1.40.0",
    "watchfiles>=0.24.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0",
    "ruff>=0.5.0",
    "mypy>=1.10",
]

[project.scripts]
codebridge = "codebridge.cli.main:app"
cb = "codebridge.cli.main:app"

[project.urls]
Homepage = "https://github.com/lanekingkong/codebridge"
Documentation = "https://github.com/lanekingkong/codebridge#readme"
Issues = "https://github.com/lanekingkong/codebridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["codebridge"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
